# hoblang

./: .gitignore  :w  CMakeLists.txt  README.md  hoblang.c  tests.c
.github/workflows/: build-and-test.yaml  build.yaml
examples/: 010-extern.hob  020-vars.hob  030-if-else.hob  040-while.hob  050-as-expression.hob  060-ext-functions.hob  070-modules-exit.hob  070-modules-main.hob  080-libraries.hob  090-defer.hob  100-arrays.hob  110-generic-types.hob  120-generic-functions.hob  125-generic-ext-func.hob  130-for.hob  140-const-structs.hob  generics.hob  ir_test.hob  slice.hob  std-010-panic.hob  std-020-result.hob  str.hob  test.hob
for_tests/: test_multiline.txt
lib/c/: err.hob  lib.hob
lib/conv/: lib.hob
lib/env/: lib.hob
lib/io/: fd.hob  fs.hob  lib.hob  socket.hob
lib/list/: lib.hob
lib/math/: lib.hob
lib/mem/: lib.hob
lib/os/: lib.hob
lib/process/: lib.hob
lib/result/: lib.hob
lib/std/: int.hob  lib.hob  panic.hob  range.hob  slice.hob  str.hob
lib/strings/: lib.hob
libs/internal/: lib.hob  slice.hob  string.hob
libs/io/: lib.hob
libs/list/: lib.hob
libs/mem/: lib.hob
libs/process/: lib.hob
libs/result/: lib.hob
libs/slice/: lib.hob
libs/std/: def.hob  lib.hob  panic.hob  slice.hob  str.hob
libs/string/: lib.hob  slice.hob
src/: print.c  print.h
src/ast/: body.c  body.h  expr.c  expr.h  generic.c  generic.h  global.c  global.h  mempool.h  node.c  node.h  path.c  path.h  stmt.c  stmt.h  type.c  type.h
src/cmd/: cmd.c  cmd.h  raw.c  raw.h
src/core/: ansi.h  arena.c  arena.h  arena.test.c  arena.test.h  assert.h  buffer.c  buffer.h  buffer.test.c  buffer.test.h  file_content.c  file_content.h  file_content.test.c  file_content.test.h  keymap.c  keymap.h  keymap.test.c  keymap.test.h  log.c  log.h  math.h  mempool.c  mempool.h  mempool.test.c  mempool.test.h  null.c  null.h  opt_slice.h  path.c  path.h  process.c  process.h  slice.c  slice.h  vec.c  vec.h  vec.test.c  vec.test.h
src/hir/: decl.h  func.h  gen.h  hir.c  hir.h  hir.test.c  hir.test.h  type.h
src/ir/: const.c  const.h  decls.h  extern.h  func.c  func.h  ir.c  ir.h  ir.test.c  ir.test.h  location.h  mut.h  var.h
src/lexer/: api.c  api.h  api.test.c  api.test.h  api_next.c  lexer.c  lexer.h  next.c  (+2 more)
(+337 files in other folders)
